# hamsterflow

./: .gitignore  INSTRUCTIONS.md  LICENSE  README.md  pyproject.toml
src/hamsterflow/: __init__.py  __main__.py  config.py  main.py
src/hamsterflow/analysis/: __init__.py  sentiment.py
src/hamsterflow/api/: __init__.py  routes.py
src/hamsterflow/ingest/: __init__.py  rss.py
src/hamsterflow/storage/: __init__.py  database.py
tests/integration/: test_pipeline_placeholder.py
tests/unit/: test_app.py  test_settings.py
