[project]
name = "HamsterFlow"
version = "2025.0.0"
authors = [
  {name = "Matthijs de Keijzer"},
]
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "pytest>=9.0.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.2.0",
    "uvicorn>=0.38.0",
]
requires-python = ">= 3.14"

[project.urls]
Repository = "https://github.com/MRDekeijzer/hamsterflow"
